# salak.rs

./: Cargo.toml  LICENSE  README.md  app.toml  from_environment.md  test.sh
.github/workflows/: rust.yml
benches/: app.rs  core.rs  property.rs
examples/: app.toml  salak.rs
salak_derive/: Cargo.toml  README.md
salak_derive/src/: lib.rs
salak_factory/: Cargo.toml  README.md  test.sh
salak_factory/examples/: postgres.rs  redis.rs  test_log.rs  toy_log.rs
salak_factory/src/: env_log.rs  lib.rs  metric.rs  pool.rs  postgres.rs  postgresql.rs  redis.rs  redis_cluster.rs  redis_default.rs  toy_log.rs  tracing_log.rs
src/: app.rs  args.rs  derive.rs  enums.rs  env.rs  environment.rs  err.rs  file.rs  lib.rs  map.rs  property.rs  raw.rs  raw_enum.rs  raw_ioref.rs  raw_vec.rs  source.rs  source_map.rs  source_rand.rs  source_raw.rs  source_toml.rs  source_yaml.rs  toml.rs  utils.rs  yaml.rs
src/env/: factory.rs  internal.rs  mod.rs  placeholder.rs  registry.rs  salak.rs
src/exx/: registry.rs  salak.rs
src/source/: args.rs  env.rs  file.rs  internal.rs  map.rs  mod.rs  rand.rs  toml.rs  yaml.rs
src/sxx/: args.rs  env.rs  file.rs  internal.rs  logger.rs  rand.rs  toml.rs  yaml.rs
tests/fail/: enum_attr_1.rs  enum_attr_1.stderr  enum_attr_2.rs  enum_attr_2.stderr  enum_fail.rs  enum_fail.stderr  struct_attr_1.rs  struct_attr_1.stderr  struct_attr_2.rs  struct_attr_2.stderr  struct_attr_3.rs  struct_attr_3.stderr  struct_field_1.rs  struct_field_1.stderr  struct_field_2.rs  struct_field_2.stderr
