[[example]]
name = 'salak'
required-features = [
    'default',
    'enable_pico',
]

[package]
name = 'salak'
version = '0.8.0'
authors = ['Daniel Yu <leptonyu@gmail.com>']
edition = '2018'
license = 'MIT'
description = 'A rust configuration loader'
documentation = 'https://docs.rs/salak/'
repository = 'https://github.com/leptonyu/salak.rs'
homepage = 'https://github.com/leptonyu/salak.rs'
readme = 'README.md'
keywords = [
    'configuration',
    'config',
    'settings',
    'env',
    'environment',
]
categories = ['config']
[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    '--cfg',
    'docsrs',
]

[package.metadata.playground]
all-features = true

[dependencies]
lazy_static = '^1.4'

[dependencies.regex]
version = '^1.4'

[dependencies.clap]
version = '^2.33'
optional = true

[dependencies.pico-args]
version = '^0.4'
optional = true

[dependencies.toml]
version = '^0.5'
optional = true

[dependencies.log]
version = '^0.4'
optional = true

[dependencies.yaml-rust]
version = '^0.4.5'
optional = true

[dependencies.rand]
version = '^0.8'
optional = true

[dependencies.salak_derive]
path = './salak_derive'
version = '^0.3'
optional = true

[dev-dependencies]
quickcheck = '1'
quickcheck_macros = '1'
env_logger = '0.8'
rand = '0.8'

[features]
default = [
    'enable_derive',
    'enable_toml',
    'enable_log',
]
enable_toml = ['toml']
enable_clap = ['clap']
enable_pico = ['pico-args']
enable_log = ['log']
enable_derive = ['salak_derive']
enable_yaml = ['yaml-rust']
enable_rand = ['rand']

[workspace]
members = [
    '.',
    'salak_derive',
    'salak_factory',
]
