[package]
authors = ['Daniel Yu <leptonyu@gmail.com>']
categories = ['config']
description = 'A rust configuration loader'
documentation = 'https://docs.rs/salak/'
edition = '2018'
homepage = 'https://github.com/leptonyu/salak.rs'
keywords = [
  'configuration',
  'config',
  'settings',
  'env',
  'environment',
]
license = 'MIT'
name = 'salak'
readme = 'README.md'
repository = 'https://github.com/leptonyu/salak.rs'
version = '0.11.1'
[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  '--cfg',
  'docsrs',
]

[package.metadata.playground]
all-features = true

[dependencies]
clap = {optional = true, version = "^2.33"}
lazy_static = '^1.4'
log = {optional = true, version = '^0.4'}
pad = {optional = true, version = "0.1"}
rand = {optional = true, version = '^0.8'}
salak_derive = {optional = true, path = './salak_derive', version = '^0.6'}
toml = {optional = true, version = '^0.5'}
yaml-rust = {optional = true, version = '^0.4.5'}

[dev-dependencies]
criterion = '0.3'
env_logger = '0.8'
quickcheck = '1'
quickcheck_macros = '1'
rand = '0.8'
trybuild = "1"

[features]
args = ['clap', 'derive']
default = [
  'derive',
  'rand',
  'toml',
]
derive = ['salak_derive', 'pad']
yaml = ['yaml-rust']

[workspace]
members = [
  '.',
  'salak_derive',
  'salak_factory',
]

[[bench]]
harness = false
name = "property"

[[example]]
name = "salak"
required-features = ["default", "args"]
