[package]
name = 'salak_derive'
version = '0.3.0'
authors = ['Daniel Yu <leptonyu@gmail.com>']
edition = '2018'
license = 'MIT'
description = 'A rust configuration loader'
documentation = 'https://docs.rs/salak_derive/'
repository = 'https://github.com/leptonyu/salak.rs'
homepage = 'https://github.com/leptonyu/salak.rs'
readme = 'README.md'
keywords = [
    'configuration',
    'config',
    'settings',
    'env',
    'environment',
]
categories = ['config']

[lib]
proc-macro = true

[dependencies]
syn = {version='1', features = ['extra-traits']}
quote = '1'
lazy_static = '^1.4'
