[package]
authors = ['Daniel Yu <leptonyu@gmail.com>']
categories = ['config']
description = 'A rust configuration loader'
documentation = 'https://docs.rs/salak_derive/'
edition = '2018'
homepage = 'https://github.com/leptonyu/salak.rs'
keywords = [
  'configuration',
  'config',
  'settings',
  'env',
  'environment',
]
license = 'MIT'
name = 'salak_derive'
readme = 'README.md'
repository = 'https://github.com/leptonyu/salak.rs'
version = '0.5.1'

[lib]
proc-macro = true

[dependencies]
lazy_static = '^1.4'
quote = '1'
syn = {version = '1', features = ['extra-traits']}
