[package]
authors = ['Daniel Yu <leptonyu@gmail.com>']
categories = ['config']
description = 'A resource initialization factory using salak'
documentation = 'https://docs.rs/salak_factory/'
edition = '2018'
homepage = 'https://github.com/leptonyu/salak.rs'
keywords = [
  'config',
  'factory',
]
license = 'MIT'
name = 'salak_factory'
readme = 'README.md'
repository = 'https://github.com/leptonyu/salak.rs'
version = '0.5.1'
[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  '--cfg',
  'docsrs',
]

[package.metadata.playground]
all-features = true

[dependencies]
postgres = {optional = true, version = '0.19'}
r2d2 = {optional = true, version = '^0.8'}
redis = {optional = true, version = '0.20'}
salak = {path = '..', version = '^0.11'}
scheduled-thread-pool = {optional = true, version = '^0.2'}

[features]
default = []
pool = [
  'r2d2',
  'scheduled-thread-pool',
]
postgresql = [
  'postgres',
  'pool',
]
redis_cluster = [
  'redis/cluster',
  'pool',
]
redis_default = [
  'redis/default',
  'pool',
]

[[example]]
name = "redis"
required-features = ["default", "redis_default", "salak/args"]
