[package]
authors = ['Daniel Yu <leptonyu@gmail.com>']
categories = ['config']
description = 'A resource initialization factory using salak'
documentation = 'https://docs.rs/salak_factory/'
edition = '2018'
homepage = 'https://github.com/leptonyu/salak.rs'
keywords = [
  'config',
  'factory',
]
license = 'MIT'
name = 'salak_factory'
readme = 'README.md'
repository = 'https://github.com/leptonyu/salak.rs'
version = '0.9.0'
[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  '--cfg',
  'docsrs',
]

[package.metadata.playground]
all-features = true

[dependencies]
ipnet = {optional = true, version = '^2.3'}
log = {optional = true, version = '^0.4'}
metrics = {optional = true, version = '^0.16'}
metrics-exporter-prometheus = {optional = true, version = '^0.5'}
native-tls = {optional = true, version = '^0.2'}
postgres = {optional = true, version = '^0.19'}
postgres-native-tls = {optional = true, version = '^0.5'}
r2d2 = {optional = true, version = '^0.8'}
redis = {optional = true, version = '0.20'}
salak = {path = '..', version = '^0.13', features = ['default', 'app']}
scheduled-thread-pool = {optional = true, version = '^0.2'}

[dev-dependencies]
env_logger = "0.8"
log = "0.4"

[features]
default = []
metric = ['salak/ipnet', 'ipnet', 'metrics-exporter-prometheus', 'metrics']
pool = [
  'r2d2',
  'scheduled-thread-pool',
]
postgresql = [
  'postgres-native-tls',
  'native-tls',
  'postgres',
  'pool',
]
redis_cluster = [
  'redis/cluster',
  'pool',
]
redis_default = [
  'redis/default',
  'pool',
]

[[example]]
name = "redis"
required-features = ["default", "redis_default", 'log', 'salak/all']
[[example]]
name = "postgres"
required-features = ["default", "postgresql", 'log', 'salak/log','salak/args', 'metric']
