[package]
authors = ['Daniel Yu <leptonyu@gmail.com>']
categories = ['config']
description = 'A resource initialization factory using salak'
documentation = 'https://docs.rs/salak_factory/'
edition = '2018'
homepage = 'https://github.com/leptonyu/salak.rs'
keywords = [
  'config',
  'factory',
]
license = 'MIT'
name = 'salak_factory'
readme = 'README.md'
repository = 'https://github.com/leptonyu/salak.rs'
version = '0.10.0'
[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  '--cfg',
  'docsrs',
]

[package.metadata.playground]
all-features = true

[dependencies]
log = {optional = true, version = '^0.4'}
env_logger = {optional = true, version = '^0.8'}
metrics = {optional = true, version = '^0.16'}
metrics-exporter-prometheus = {optional = true, version = '^0.5', default-features = false}
native-tls = {optional = true, version = '^0.2'}
parking_lot = "0.11"
postgres = {optional = true, version = '^0.19'}
postgres-native-tls = {optional = true, version = '^0.5'}
r2d2 = {optional = true, version = '^0.8'}
redis = {optional = true, version = '0.20'}
salak = {path = '..', version = '^0.14', features = ['default', 'app']}
scheduled-thread-pool = {optional = true, version = '^0.2'}
sysinfo = {optional = true, version = '^0.18'}

[dev-dependencies]
env_logger = "0.8"
log = "0.4"

[features]
default = []
logger = ['log', 'env_logger', 'salak/log']
metric = ['salak/ipnet', 'metrics-exporter-prometheus', 'metrics', 'sysinfo']
pool = [
  'r2d2',
  'scheduled-thread-pool',
]
postgresql = [
  'postgres-native-tls',
  'native-tls',
  'postgres',
  'pool',
]
redis_cluster = [
  'redis/cluster',
  'pool',
]
redis_default = [
  'redis/default',
  'pool',
]

[[example]]
name = "redis"
required-features = ["default", "redis_default", 'logger', 'salak/all']
[[example]]
name = "postgres"
required-features = ["default", "postgresql", 'log', 'salak/log', 'salak/args', 'metric']
